[metadata]
name = xeda

[options]
include_package_data = True
package_dir = =src
packages = find:

[options.extras_require]
test = pytest
docs =
    sphinx

[options.package_data]
* = *.xdc, *.sdf, *.sdc, *.dse, *.fdc, *.ldc, *.tcl, *.json, *.ys

[options.packages.find]
where = src


[versioneer]
VCS = git
style = pep440
versionfile_source = src/xeda/_version.py
versionfile_build = xeda/_version.py
tag_prefix =
parentdir_prefix = xeda-

[tool:pytest]
minversion = 7.1
addopts =
    --verbose
    --doctest-modules
testpaths =
    examples/
    tests/
python_files =
    test_*.py
    test.py

[pycodestyle]
max-line-length = 120
# extend-ignore = D,E203 # D: Docstring errors, E203: see https://github.com/PyCQA/pycodestyle/issues/373 
ignore = E501
indent-size = 4
exclude =
    .github
    .eggs

[pydocstyle]
ignore = D100,D102,D103,D105,D202,D203,D213,D400,D405,D406,D407,D413,D415

[pylint]
disable =
    C0103,C0301,C0103,C0116,R0201,R0801,R0903,R0912,R0913,R0914,R0915,W0702
ignore-docstrings = yes
output-format = colorized

[testenv:pytest]
deps =
    pytest>7
    pytest-cov
    pytest-flake8>=1.1.1
commands =
    python -m pip install -U -r examples/vhdl/sqrt/tb-requirements.txt
    pytest
# skip_install = true

[testenv:mypy]
basepython = python3.9
deps = mypy>=0.940
commands =
    python -m pip install -U -r types-requirements.txt
    mypy src
# skip_install = true

[mypy]
ignore_missing_imports = True
# namespace_packages = True
# explicit-package-bases = True
exclude =
    (?x)(
        ^src/xeda/plugins/.*
        | ^build/.*
        | ^.tox/.*
        | ^examples/.*
    )
warn_unused_configs = True
check_untyped_defs = True
color_output = False
pretty = False
follow_imports = skip
## WIP:
# strict = True
## for future:
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
# disallow_untyped_decorators = True

[flake8]
ignore = D203,E501,F541,W503
exclude =
    xeda/plugins
    ./xeda/_version.py
max-complexity = 22
max-line-length = 120