[metadata]
name = xeda

[options]
package_dir =
    =src
include_package_data = True
packages = find:
install_requires =
  jinja2            ~= 3.1
  pydantic          ~= 1.9           # strongly validated dataclasses
  tomli             ~=2.0;python_version<"3.11"
  python-box[]      ~= 6.0
  # experimental core
  attrs             ~= 22.1          # lightweight dataclass alternative
  cattrs            ~= 22.1          # lightweight dataclass alternative
  attrs_strict      ~= 1.0           # strict type validation for attrs
  pyyaml            ~= 6.0           # YAML as an alternative design/project format
  typeguard         ~= 2.13
  varname           ~= 0.9
  overrides         ~= 6.1
  pathvalidate      ~= 2.5
  # console/CLI
  click             ~= 8.1
  click_help_colors ~= 0.9
  coloredlogs       ~= 15.0
  rich              ~= 12.5
  # experimental CLI
  simple_term_menu  ~= 1.5
  # misc experimental
  psutil            ~= 5.9
  junitparser       ~= 2.4  # <-- FIXME: remove dependency
  pyvcd             ~= 0.3
  GitPython         >= 3.1
  pebble            ~= 5.0

[options.extras_require]
tests =
    pytest ~= 7.1
    pytest-cov >= 3,< 5

docs =
    sphinx
    sphinx-tabs
    sphinx-jinja
    sphinxcontrib.bibtex
    sphinx_panels
    sphinxext.rediraffe
    sphinxcontrib.mermaid
    sphinxext.opengraph
    autodoc_pydantic
    sphinx_book_theme
    myst-parser

[options.entry_points]
console_scripts =
    xeda = xeda.cli:cli

[options.package_data]
* = *.xdc, *.sdf, *.sdc, *.dse, *.fdc, *.ldc, *.tcl, *.json, *.ys

[options.packages.find]
where = src

[tool:pytest]
minversion = 7.1
addopts =
    --verbose
    --doctest-modules
testpaths =
    examples/
    tests/
python_files =
    test_*.py
    test.py

[pycodestyle]
max-line-length = 120
# extend-ignore = D,E203 # D: Docstring errors, E203: see https://github.com/PyCQA/pycodestyle/issues/373 
ignore = E501
indent-size = 4
exclude =
    .github
    .eggs

[pydocstyle]
ignore = D100,D102,D103,D105,D202,D203,D213,D400,D405,D406,D407,D413,D415

[pylint]
disable =
    C0103,C0301,C0103,C0116,R0201,R0801,R0903,R0912,R0913,R0914,R0915,W0702
ignore-docstrings = yes
output-format = colorized

[mypy]
ignore_missing_imports = True
# namespace_packages = True
# explicit-package-bases = True
exclude =
    (?x)(
        ^src/xeda/plugins/.*
        | ^build/.*
        | ^.tox/.*
        | ^examples/.*
    )
warn_unused_configs = True
check_untyped_defs = True
color_output = False
pretty = False
follow_imports = skip
## WIP:
# strict = True
## for future:
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
# disallow_untyped_decorators = True

[flake8]
ignore = D203,E501,F541,W503
max-complexity = 22
max-line-length = 120