[options.entry_points]
console_scripts =
    xeda = xeda.cli:cli

[tool:pytest]
minversion = 7.1
addopts =
    --verbose
    --doctest-modules
testpaths =
    examples/
    tests/
python_files =
    test_*.py
    test.py

[pycodestyle]
max-line-length = 100
# extend-ignore = D,E203 # D: Docstring errors, E203: see https://github.com/PyCQA/pycodestyle/issues/373 
ignore = E501
indent-size = 4
exclude =
    .github
    .eggs

[pydocstyle]
ignore = D100,D102,D103,D105,D202,D203,D213,D400,D405,D406,D407,D413,D415

[pylint]
disable =
    C0103,C0301,C0103,C0116,R0201,R0801,R0903,R0912,R0913,R0914,R0915,W0702
ignore-docstrings = yes
output-format = colorized


[flake8]
ignore = D203,E501,F541,W503
max-complexity = 22
max-line-length = 100